Documentação Dockerized + Refactor nomes + PDV_PATH 100%
