# src/app/models/PDVModel.ts
@@ -1,23 +1,0 @@
-import { Document, model, Schema } from "mongoose";
-
-import { IPDV } from "../interfaces/IPDV";
-
-type PDVType = IPDV & Document;
-
-export default model<PDVType>(
-	"pdv",
-	new Schema({
-		id: Number,
-		tradingName: String,
-		ownerName: String,
-		document: { type: String, index: true, unique: true },
-		coverageArea: {
-			type: { type: String },
-			coordinates: [[[[Number, Number]]]]
-		},
-		address: {
-			type: { type: String },
-			coordinates: [Number, Number]
-		}
-	})
-);
